--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
+  margin: 0;
+  padding: 20px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  align-items: 0;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.grid {
+  display: grid;
+  gap: 1px;
+  grid-template-columns: repeat(3, 1fr)}
+
+.board-container{
+  width: 100vw;
+  height: 300px;
+  /* border: 1px solid red; */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.square{
+  width: 33vw;
+  height: 100px;
+  border: 1px solid #0000ff;
+  transition: 0.2s ease-in;
+  background-color: rgba(0, 0, 255, 0);
+  text-align: center;
+  font-size: 56px;
+  padding-top: 25px;
 }
+
+.square:hover{
+  background-color: rgba(0, 0, 255, 0.424);
+  transition: 0.2s ease-in;
+  cursor: pointer;
+}
+
